--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -49,6 +49,19 @@
       }
     }
   }
+
+  .section-results {
+    .results {
+      &-card {
+        padding: 0 50px;
+
+        &__body {
+          padding: 18px;
+          flex: 0 1 40%;
+        }
+      }
+    }
+  }
 }
 
 /****************************/
@@ -59,6 +72,47 @@
   .layout {
     padding: 0 40px;
   }
+
+  .swiper-button-next::after,
+  .swiper-button-prev::after {
+    font-size: 30px;
+  }
+
+  .swiper-button-prev,
+  .swiper-container-rtl .swiper-button-next {
+    left: 0;
+  }
+
+  .swiper-button-next,
+  .swiper-container-rtl .swiper-button-prev {
+    right: 0;
+  }
+
+  .section-results {
+    .results {
+      &-card {
+        padding: 0 30px;
+        &__body {
+          flex: 0 1 60%;
+        }
+
+        &-list {
+          &__num {
+            margin-right: 11px;
+            font-size: 20px;
+            line-height: 30px;
+          }
+
+          li {
+            font-size: 15px;
+            line-height: 15px;
+          }
+        }
+      }
+    }
+  }
+
+
 }
 
 /****************************/
@@ -90,6 +144,19 @@
       }
     }
   }
+
+  .section-results {
+    .results {
+      &-card {
+
+        &__body {
+          flex: 0 1 70%;
+        }
+      }
+    }
+  }
+
+
 }
 
 
@@ -125,6 +192,25 @@
       }
     }
   }
+
+  .section-results {
+    .results {
+      &-card {
+        padding: 0;
+        flex-flow: column wrap;
+        &__body {
+          order: 2;
+          width: 100%;
+          flex: auto;
+
+        }
+
+        &__img {
+          order: 1;
+        }
+      }
+    }
+  }
 }
 
 /****************************/
@@ -142,7 +228,7 @@
 /****************************/
 /****************************/
 
-@media screen and (max-width:580px) {
+@media screen and (max-width:780px) {
   .layout {
     padding: 0 18px;
   }
