--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -62,6 +62,64 @@
       }
     }
   }
+
+  .banner{
+
+    &-brand {
+      justify-content: center;
+
+      &__item {
+        img {
+          width: 80%;
+        }
+      }
+    }
+
+    &-top {
+      &-advantages {
+        &__item {
+          margin-right: 0;
+        }
+      }
+    }
+  }
+
+  .section-team {
+    .team {
+      &-row {
+        display: block;
+
+        &-item {
+          width: 100%;
+          padding: 0 !important;
+        }
+      }
+
+      &-card {
+        height: 320px;
+      }
+    }
+  }
+
+  .section-efficiency {
+    .efficiency {
+      &-form {
+        top: 140px;
+        margin-left: -20%;
+
+        &__title {
+          letter-spacing: 0.15em;
+          right: 100px;
+          width: 80%;
+        }
+      }
+
+      &-step {
+        margin-left: 17%;
+      }
+    }
+  }
+
 }
 
 /****************************/
@@ -71,6 +129,25 @@
 @media screen and (max-width:1400px) {
   .layout {
     padding: 0 40px;
+  }
+
+  .banner-top {
+    padding: 70px 70px 100px;
+    background-position: 70% 0;
+
+    &__title {
+      font-size: 30px;
+      line-height: 30px;
+    }
+
+    &__head {
+      width: 70%;
+    }
+  }
+
+  .section-title {
+    font-size: 30px;
+    line-height: 30px;
   }
 
   .swiper-button-next::after,
@@ -112,6 +189,63 @@
     }
   }
 
+  .section-cost {
+    .cost {
+      margin: 0;
+      padding: 20px 0;
+
+      &-plane-gift__icon {
+        display: none;
+      }
+
+      &-item {
+        padding: 0 4px;
+      }
+    }
+  }
+
+  .fail {
+    &-bigtitle {
+      display: none;
+    }
+  }
+
+  .section-number {
+    .number {
+      margin: 40px 0;
+
+      &-grid {
+        justify-content: center;
+      }
+
+      &-card {
+
+        &__bg {
+          width: 80%;
+        }
+
+        &-label {
+          margin: 0 auto 20px;
+          &__figure {
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+
+  .section-efficiency {
+    .efficiency {
+      &-form {
+        margin-left: -23%;
+      }
+
+      &-step {
+        margin-left: 20%;
+      }
+    }
+  }
+
 
 }
 
@@ -121,6 +255,43 @@
 
 @media screen and (max-width:1200px) {
 
+  .c-section {
+    padding: 0 0 60px;
+  }
+
+  .banner-top {
+    padding: 50px;
+
+    &__head {
+      margin-bottom: 40px;
+    }
+
+    &-advantages {
+      display: block;
+
+      &__item {
+        max-width: 100%;
+        margin-bottom: 20px;
+        width: 100%;
+      }
+
+      &-card {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: flex-start;
+        align-items: center;
+
+        &__label {
+          flex: 0 1 41px;
+          margin: 0 14px 0 0;
+        }
+
+        &__text {
+          text-align: left;
+        }
+      }
+    }
+  }
 
   .section-audit {
     .audit {
@@ -156,6 +327,114 @@
     }
   }
 
+  .section-cost {
+    .cost {
+
+
+      &-plane {
+        &__head {
+          padding: 16px 18px;
+        }
+
+        &__title,
+        &__price {
+          font-size: 20px;
+          line-height: 21px;
+        }
+
+        &__body{
+          padding: 0 18px 24px;
+        }
+      }
+    }
+  }
+
+  .section-number {
+    .number {
+      margin: 40px 0;
+
+      &-grid {
+        justify-content: center;
+      }
+
+      &-card {
+
+        &__title {
+          font-size: 18px;
+          line-height: 24px;
+        }
+
+        &-label {
+          margin: 0 auto;
+          width: 250px;
+          height: 250px;
+
+          &__num {
+            font-size: 48px;
+            line-height: 48px;
+          }
+        }
+      }
+    }
+  }
+
+  .section-efficiency {
+    .efficiency {
+      &-form {
+        //position: static;
+        //top: auto;
+        //left: auto;
+        //margin: 0;
+        //transform: none;
+        //
+        //&__item {
+        //  position: static;
+        //  right: 0 !important;
+        //  margin-bottom: 20px;
+        //}
+        margin-left: -100px;
+
+        &-card {
+          justify-content: center;
+        }
+      }
+
+      &-step {
+        display: none;
+      }
+
+      &-schema {
+        //display: flex;
+        //flex-flow: row wrap;
+        //justify-content: flex-end;
+        //align-items: stretch;
+        width: 465px;
+        position: relative;
+        left: 40%;
+        &__text {
+          h4 {
+            margin: 0;
+          }
+          span {
+            display: block;
+          }
+
+          &:nth-child(1) {
+            top: 3%;
+          }
+          &:nth-child(2) {
+            top: 31%;
+          }
+          &:nth-child(3) {
+            top: 58%;
+          }
+          &:nth-child(4) {
+            top: 85%;
+          }
+        }
+      }
+    }
+  }
 
 }
 
@@ -195,6 +474,11 @@
 
   .section-results {
     .results {
+
+      .swiper-button-next,
+      .swiper-button-prev {
+        top: 25%;
+      }
       &-card {
         padding: 0;
         flex-flow: column wrap;
@@ -211,6 +495,33 @@
       }
     }
   }
+
+  .section-cost {
+    .cost {
+      display: block;
+
+      &-item {
+        width: 100%;
+        margin-bottom: 20px;
+      }
+    }
+  }
+
+  .section-number {
+    .number {
+
+      &-col {
+        width: 50%;
+      }
+
+      &-card {
+        &__bg {
+          width: 70%;
+        }
+      }
+    }
+  }
+
 }
 
 /****************************/
@@ -222,6 +533,44 @@
   .layout {
     padding: 0 30px;
   }
+
+  .banner-top {
+    padding: 50px;
+    background-position: 57% 0;
+
+    &__head {
+
+    }
+
+    &-advantages {
+
+
+      &__item {
+
+      }
+
+      &-card {
+
+
+        &__label {
+
+        }
+
+        &__text {
+
+        }
+      }
+    }
+  }
+
+}
+
+/****************************/
+/****************************/
+/****************************/
+
+@media screen and (max-width:800px) {
+
 }
 
 /****************************/
@@ -231,5 +580,59 @@
 @media screen and (max-width:780px) {
   .layout {
     padding: 0 18px;
+  }
+
+
+  .section-number {
+    .number {
+
+      &-grid {
+      }
+
+      &-col {
+        width: 50%;
+      }
+
+      &-card {
+
+        &__bg {
+          width: 70%;
+        }
+
+        &__title {
+          font-size: 14px;
+          line-height: 20px;
+          padding: 0 20px;
+        }
+
+        &-label {
+
+          width: 200px;
+          height: 200px;
+
+          &__num {
+            font-size: 40px;
+            line-height: 40px;
+          }
+
+          &__text {
+            font-size: 14px;
+            line-height: 14px;
+          }
+        }
+      }
+    }
+  }
+
+}
+
+
+/****************************/
+/****************************/
+/****************************/
+
+@media screen and (max-width:580px) {
+  .layout {
+    padding: 0 10px;
   }
 }
